[tool.poetry]
name = "coursework-3"
version = "0.1.0"
description = ""
authors = ["Johnny <evgenykiselev@aol.com>"]
readme = "README.md"
packages = [{include = "coursework_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
