[tool.poetry]
name = "coursework-3"
version = "0.1.0"
description = ""
authors = ["Johnny <evgkisevgkis@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_3"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
